# empty

./: .gitignore  Cargo.toml  README.md  a.txt  index.html
.devcontainer/: docker-compose.yml
.github/workflows/: rust.yml
Rust-axum-postgres-CRUD-app-main/: Cargo.toml
Rust-axum-postgres-CRUD-app-main/src/: main.rs
crates/db/: Cargo.toml  build.rs
crates/db/migrations/: 20250111102118_user_tables.sql
crates/db/src/: lib.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: config.rs  main.rs  root.rs
db/migrations/: .env  20250111102118_user_tables.sql
django/project/: db.sqlite3
django/project/main/: models.py
django/project/main/migrations/: 0001_initial.py
django/project/project/: settings.py
jwt/: Cargo.toml
jwt/src/: main.rs
native_and_tokio/nat/: Cargo.toml
native_and_tokio/nat/src/: main.rs
reactapp/artists_frontend/src/: main.jsx
reactapp/artists_frontend/src/components/: Artists.jsx
reactapp/backend/: Cargo.toml  main.rs
sqlite/: Cargo.toml  cats.db  ex1
sqlite/src/: main.rs
wirein/: Cargo.toml
wirein/src/: linux.rs  main.rs
xobject/xbject/: Cargo.toml
xobject/xbject/src/: main.rs
