[package]
name = "axum-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
[dependencies]
#axum
axum = "0.7.4"


#postgres
sqlx = {version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"]}

#serde
serde = { version = "1.0.195", features = ["derive"] }
serde_json = {version = "1.0.111"}

#env
dotenvy = "0.15.7"
deadpool-postgres = "0.14.1"


tokio = { version = "1", features = ["full"] }