[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio"] }
axum-extra = "0.9"
db = { version = "0.1.0", path = "../db" }
form = "0.12.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", default-features = false }
tower-livereload = "0.9"
tokio-postgres = "0.7"
